# AutoRAG-tutorial-ko

./: pyproject.toml
99-Projects/korean_embedding/: evaluator.py  make_corpus_n_qa.py  ollama_evalutator.ipynb  ollama_evalutator.py  pipeline.yaml  run_optimal_autorag_pipeline.ipynb  run_web.py
99-Projects/korean_embedding/benchmark/: trial.json
99-Projects/korean_embedding/benchmark/0/: config.yaml  summary.csv
99-Projects/korean_embedding/benchmark/0/post_retrieve_node_line/: summary.csv
99-Projects/korean_embedding/benchmark/0/retrieve_node_line/: summary.csv
99-Projects/korean_embedding/benchmark/data/: corpus.parquet
99-Projects/korean_embedding/benchmark/resources/: bm25_ko_kiwi.pkl
99-Projects/korean_embedding/benchmark/resources/chroma/: chroma.sqlite3
99-Projects/korean_embedding/benchmark_ollama/: trial.json
99-Projects/korean_embedding/benchmark_ollama/0/: config.yaml  summary.csv
99-Projects/korean_embedding/benchmark_ollama/0/post_retrieve_node_line/: summary.csv
99-Projects/korean_embedding/benchmark_ollama/0/retrieve_node_line/: summary.csv
99-Projects/korean_embedding/benchmark_ollama/data/: qa.parquet
99-Projects/korean_embedding/benchmark_ollama/resources/chroma/: chroma.sqlite3
99-Projects/korean_embedding/config/: ollama_evaluator_config.yaml  ollama_pipeline.yaml
99-Projects/korean_embedding/data/: corpus.parquet
99-Projects/ragas_evaluate/: eeve.parquet  gemma2.parquet  mistral.parquet  ollama_ragas_evaluate.ipynb  qwen2.parquet
99-Projects/ragas_evalutator/: ollama_ragas_evalutator.ipynb
(+52 files in other folders)
