[tool.poetry]
name = "autorag-tutorial-ko"
version = "0.1.0"
description = ""
authors = ["anpigon <markan82@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
autorag = ">=0.2.8"
click = "^8.1.7"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
